[project]
name = "ai-usage-cli"
version = "0.1.0"
description = "CLI tool to check AI coding tool usage quotas (Claude, Codex, Gemini, Copilot, z.ai)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tie Li", email = "tieli@pm.me" },
]
keywords = ["ai", "cli", "usage", "quota", "claude", "codex", "gemini", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "truststore>=0.9",
]

[project.scripts]
ai-usage = "ai_usage.main:main"

[project.urls]
Homepage = "https://github.com/tieli/ai-usage-cli"
Repository = "https://github.com/tieli/ai-usage-cli"
Issues = "https://github.com/tieli/ai-usage-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_usage"]
